--- a/src/components/ui/ItemImages/ItemImages.css
+++ b/src/components/ui/ItemImages/ItemImages.css
@@ -40,6 +40,8 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  background-color: #333;
+  border: #555 1px solid;
 }
 
 .main-image-parent .expand-image-button:hover {
